# constexpr-registry

./: CMakeLists.txt  README.md
src/registry-compiletime/: CMakeLists.txt  main.cpp
src/registry-runtime/: main.cpp
